--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://web.facebook.com/photo?fbid=903650893002718&set=a.152975988070216" class="img-responsive" alt="Circus tent">
+                        <img src="https://image.shutterstock.com/image-photo/three-working-line-german-shepherd-260nw-580168381.jpg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
